# napari-ome-zarr-navigator

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pixi.toml  pyproject.toml  pyrightconfig.json  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
examples/: run_roi_loader.py  testing_OME_Zarr_Image.ipynb
src/napari_ome_zarr_navigator/: __init__.py  _label_save_utils.py  _sample_data.py  condition_filter.py  img_browser.py  label_saver.py  napari.yaml  ome_zarr_image.py  plate_browser.py  plate_manager.py  roi_annotator.py  roi_loader.py  roi_loading_utils.py  roi_run_script.py  run_img_browser.py  run_plate_browser.py  util.py  utils_roi_loader.py  well_utils.py
src/napari_ome_zarr_navigator/_tests/: conftest.py  no_run_test_sample_data.py  test_OMEZarrImage.py  test_condition_filter.py  test_img_browser.py  test_label_saver.py  test_label_saver_remote.py  test_label_saver_shapes.py  test_plate_browser.py  test_plate_manager.py  test_roi_annotator.py  test_roi_loader.py  test_roi_loading_utils.py  test_sample_data.py  test_well_utils.py  test_widget.py
src/napari_ome_zarr_navigator/generate_test_data/: __init__.py  generate_condition_table.ipynb  generate_test_ome_zarrs.ipynb  update_test_data.ipynb  workflow-export-navigator_test_dataset_creation-1703255291595.json
