[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "napari-ome-zarr-navigator"
dynamic = ["version"]
description = "A plugin to browse OME-Zarr plates by conditions and load images, labels and features from ROIs"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Fabio Steffen", email = "fabio.steffen@uzh.ch" },
    { name = "Joel Luethi", email = "joel.luethi@uzh.ch" },
]
requires-python = ">=3.11,<3.13"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy",
    "magicgui",
    "qtpy",
    "scikit-image",
    "napari-ome-zarr<0.8",
    "ome-zarr",
    "wget",
    "ngio>=0.5",
    "numcodecs!=0.14.0,!=0.14.1,!=0.16", # avoids zarr issue
]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "qtpy",
    "napari",
]

[project.urls]
"Homepage" = "https://github.com/fractal-analytics-platform/napari-ome-zarr-navigator"
"Bug Tracker" = "https://github.com/fractal-analytics-platform/napari-ome-zarr-navigator/issues"
"Documentation" = "https://github.com/fractal-analytics-platform/napari-ome-zarr-navigator#README.md"
"Source Code" = "https://github.com/fractal-analytics-platform/napari-ome-zarr-navigator"
"User Support" = "https://github.com/fractal-analytics-platform/napari-ome-zarr-navigator/issues"

[project.entry-points."napari.manifest"]
napari-ome-zarr-navigator = "napari_ome_zarr_navigator:napari.yaml"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/napari_ome_zarr_navigator/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/napari_ome_zarr_navigator"]

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",   # flake8
    "UP",  # pyupgrade
    "I",   # isort
    "BLE", # flake8-blind-exception
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — let ruff format handle this
    "UP006",
    "UP007", # type annotation — magicgui requires runtime type annotations
    "G004",  # logging statement uses f-string
]

[tool.pytest.ini_options]
addopts = "--color=yes --cov=napari_ome_zarr_navigator --cov-report=xml"
