[metadata]
name = napari-ome-zarr-navigator

description = A plugin to browse OME-Zarr plates by conditions and load images, labels and features from ROIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fractal-analytics-platform/napari-ome-zarr-navigator
author = Fabio Steffen and Joel Luethi
author_email = fabio.steffen@uzh.ch
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/fractal-analytics-platform/napari-ome-zarr-navigator/issues
    Documentation = https://github.com/fractal-analytics-platform/napari-ome-zarr-navigator#README.md
    Source Code = https://github.com/fractal-analytics-platform/napari-ome-zarr-navigator
    User Support = https://github.com/fractal-analytics-platform/napari-ome-zarr-navigator/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    scikit-image
    napari-ome-zarr
    ome-zarr
    wget
    ngio==0.2.2

python_requires = >=3.11
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-ome-zarr-navigator = napari_ome_zarr_navigator:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
